# shadowscan

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AI_AGENT_CODING_PROMPT.md  APPROVE_SCANNER_SCHEMA.md  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CODE_OFF_CONDUCT.md  COMPLETE_SYSTEM_DOCUMENTATION.md  CONTRIBUTING.md  DEVELOPMENT_TODO.md  DOCUMENTATION.md  Dockerfile  FINAL_PROOF_REPORT.md  FRAMEWORK_STRUCTURE.md  GHOSTSCAN_ROADMAP.md  GOOGLE_DRIVE_INTEGRATION.md  LICENSE  MANIFEST.in  Makefile  PHASE3_SUMMARY.md  QUICKSTART.md  QUICK_SETUP.md  README.md  README_STANDALONE.md  REAL_EXPLOITATION_PROOF.md  REAL_TRANSACTION_PROOF.md  ROADMAP.md  SHADOWSCAN_BLOCKCHAIN_VERIFICATION.md  SHADOWSCAN_DEVELOPMENT_ROADMAP.md  SHADOWSCAN_EXPLOIT_WORKFLOW.md  SHADOWSCAN_FINAL_COMPROMISE_REPORT.md  SHADOWSCAN_FINAL_REPORT.md  TODO_ROADMAP.md  advanced_defi_exploiter.py  advanced_exploit_optimizer.py  advanced_payload_generator.py  (+109 more)
UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt
config/: chains.toml
core/: __init__.py  blockchain.py  cli.py  config_loader.py  database.py
database/: addresses.json  chains.json  config.json  contracts.json  reports.json  vulnerabilities.json
enhanced_screening/: __init__.py  enhanced_engine.py
enhanced_screening/commands/: __init__.py  enhanced_commands.py
enhanced_screening/config/: __init__.py  (+1 more)
examples/: shadowscan_examples.py
exploits/: __init__.py  exploit_engine.py  shiba_super_exploit_engine.py
old_scripts_backup/: cli_target_manager.py  comprehensive_defi_scanner.py  comprehensive_vulnerability_database.py  defi_discovery_scanner.py  defi_hunter.py  phase_2_database_setup.py  real_blockchain_scanner.py  run_modular_system.py  run_phase3.py  test_shib_engine.py  test_vulnerability_patterns.py  vulnerability_scanner.py
references/: exploit_database.json  vulnerability_database.json
reports/: mainnet_attack_proof.html  mainnet_attack_proof.json  shadowscan_report_20250906_003618.html  shadowscan_report_20250906_003642.html  system_validation_report.json
scanners/: __init__.py  comprehensive_scanner.py  shiba_advanced_scanner.py
scanning_env/: pyvenv.cfg
shadowscan/: .env  __init__.py  cli.py  cli_old
shadowscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shiba_real_reports/: shiba_real_report_20250920_103023.json  shiba_real_report_20250920_103128.json
tests/: conftest.py  test_contract_registry.py  test_dex_discovery.py  test_framework.py  test_tx_fetcher.py  test_vulnerability_detectors.py
vulnerability_reports/: vulnerability_scan_report_20250920_100648.json
web3_security_analysis/: .env  CONNECTION_DATA_FLOW_ANALYSIS_REPORT.md  __init__.py  address_control_test_20250921_021912.json  address_control_tester.py  advanced_authentication_bypass.py  advanced_authentication_bypass_20250921_032431.json  alternative_access_explorer.py  app_morpho_org_professional_security_report.json  automated_claim_exploiter.py  chainscan_0g_ai_professional_security_report.json  claim.holoworld.com_security_report.json  claim_monitor_and_auto_claim.py  comprehensive_exploit_framework.py  comprehensive_exploit_report_20250921_114112.json  comprehensive_exploit_report_20250921_115743.json  comprehensive_extraction_analysis_20250921_080736.json  connection_data_flow_analysis_20250921_004153.json  connection_data_flow_analysis_20250921_021558.json  connection_data_flow_analyzer.py  database_access_test_20250921_021857.json  database_access_tester.py  direct_login_exploitation_20250921_033242.json  direct_login_exploiter.py  direct_login_test.py  direct_login_test_20250921_083104.json  enhanced_vulnerability_scan_20250921_021644.json  enhanced_vulnerability_scanner.py  example.com_security_report.json  extracted_data_analyzer.py  eztonia_proxy_exploiter.py  eztonia_proxy_report_20250921_073732.json  final_access_exploitation_20250921_035005.json  final_address_claim_exploitation_20250921_081347.json  final_address_claim_exploiter.py  final_breach_report_20250921_053246.json  final_breaching_script.py  google.com_security_report.json  improved_real_scanner.py  login_page_analyzer.py  (+36 more)
(+204 files in other folders)
