[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadowscan"
version = "1.0.0"
description = "Advanced security scanning tool for blockchain and web applications"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ShadowScan Team", email = "team@shadowscan.dev"}
]
maintainers = [
    {name = "ShadowScan Team", email = "team@shadowscan.dev"}
]
keywords = [
    "security",
    "scanning",
    "blockchain",
    "web",
    "vulnerability",
    "ethereum",
    "smart-contracts",
    "penetration-testing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "web3>=6.0.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "sqlparse>=0.4.4",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selenium>=4.15.0",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "eth-abi>=4.0.0",
    "eth-utils>=2.3.0",
    "py-solc-x>=1.12.0",
    "slither-analyzer>=0.9.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "semgrep>=1.45.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "jinja2>=3.1.0",
    "marshmallow>=3.20.0",
    "jsonschema>=4.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "requests-mock>=1.10.0"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/shadowscan"
Documentation = "https://shadowscan.readthedocs.io/"
Repository = "https://github.com/yourusername/shadowscan.git"
"Bug Tracker" = "https://github.com/yourusername/shadowscan/issues"

[project.scripts]
shadowscan = "shadowscan.cli:main"
shadow-scan = "shadowscan.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shadowscan*"]
exclude = ["tests*", "docs*", "build*", "dist*"]

[tool.setuptools.package-data]
shadowscan = [
    "config/*.yaml",
    "config/*.yml",
    "config/*.json",
    "config/*.toml"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["shadowscan"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["shadowscan"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]
